--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
+
+# Fix AAPT2 issues
+android.enableAapt2FromMavenOverride=true
+android.builder.sdkDownload=false
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
