--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,20 +21,54 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     
-    - name: Setup Android SDK
+    - name: Fix SDK paths
       run: |
-        mkdir -p $HOME/android-sdk
-        cd $HOME/android-sdk
+        # Unset the default ANDROID_SDK_ROOT to avoid conflicts
+        echo "ANDROID_SDK_ROOT=" >> \$GITHUB_ENV
+        echo "ANDROID_HOME=\$HOME/android-sdk" >>
+cat > .github/workflows/build.yml << 'ENDOFFILE'
+name: Build APK
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    
+    - name: Fix SDK paths
+      run: |
+        # Unset the default ANDROID_SDK_ROOT to avoid conflicts
+        echo "ANDROID_SDK_ROOT=" >> $GITHUB_ENV
+        echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+    
+    - name: Download Android command line tools
+      run: |
+        mkdir -p $HOME/android-sdk/cmdline-tools
+        cd $HOME/android-sdk/cmdline-tools
         wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip -O cmdline-tools.zip
         unzip -q cmdline-tools.zip
         rm cmdline-tools.zip
-        mkdir -p cmdline-tools/latest
-        cd cmdline-tools
-        mv bin lib source.properties NOTICE.txt latest/ 2>/dev/null || true
+        mv cmdline-tools latest
     
     - name: Install SDK components
       run: |
         export ANDROID_HOME=$HOME/android-sdk
+        export ANDROID_SDK_ROOT=
         export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         yes | sdkmanager --licenses 2>/dev/null || true
         sdkmanager "platforms;android-33" "build-tools;33.0.2"
@@ -42,6 +76,7 @@ jobs:
     - name: Build APK
       run: |
         export ANDROID_HOME=$HOME/android-sdk
+        export ANDROID_SDK_ROOT=
         export JAVA_HOME=$JAVA_HOME
         export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
         chmod +x ./gradlew
