--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.kenotracker">
 
     <application
         android:name=".KenoTrackerApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KenoTracker"
-        tools:targetApi="34">
+        android:theme="@style/Theme.KenoTracker">
         <activity
-            android:name=".presentation.ui.screens.MainScreen"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.KenoTracker">
             <intent-filter>
