--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,4 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
+android.enableJetifier=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
-
-# Fix AAPT2 issues
-android.enableAapt2FromMavenOverride=true
-android.builder.sdkDownload=false
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
