--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
+
+# Increase JVM memory
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.caching=true
